build: compile tests with Java 25, main code with Java 17
Configure Maven to use different Java versions for main and test code:

- Main code: release=17 (Java 17 bytecode)

- Test code: release=25 (can use Java 21+ features like getFirst())

This allows tests to use newer Java features while maintaining

Java 17 compatibility for the published artifacts.

Co-authored-by: Kimi <kimi@moonshot.localhost>